--- a/app/src/main/res/layout/activity_login3.xml
+++ b/app/src/main/res/layout/activity_login3.xml
@@ -17,7 +17,7 @@
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@mipmap/logo_blue" />
+            android:src="@mipmap/icon_blue" />
     </LinearLayout>
 
     <LinearLayout
