--- a/app/src/main/res/layout/activity_login3.xml
+++ b/app/src/main/res/layout/activity_login3.xml
@@ -18,6 +18,14 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:src="@mipmap/icon_blue" />
+
+        <TextView
+            android:layout_marginTop="5dp"
+            android:text="微新风"
+            android:textColor="@color/content_black_color"
+            android:textSize="17sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <LinearLayout
@@ -62,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:background="@mipmap/btn_login"
-            android:text="获取短信验证码"
+            android:text="登录/注册"
             android:textColor="@color/white"
             android:textSize="18sp" />
 
