--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:gravity="center"
     android:paddingTop="40dp"
     android:paddingBottom="40dp"
+    android:visibility="gone"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -12,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
+        android:visibility="gone"
         android:src="@mipmap/splash"/>
 
     <FrameLayout
