--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,19 +2,15 @@
 
     <!-- Base application theme. -->
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar" >
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar" >
         <!-- Customize your theme here. -->
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/green</item>
     </style>
 
     <!-- 启动页样式 -->
     <style name="WelComeAcTheme" parent="AppTheme">
-        <!--<item name="android:windowBackground">@drawable/splash_default_bg</item>-->
-        <item name="android:windowBackground">@mipmap/splash</item>
+        <item name="android:windowBackground">@drawable/splash_default_bg</item>
+        <!--<item name="android:windowBackground">@mipmap/splash</item>-->
         <item name="android:windowFullscreen">true</item>
         <item name="windowActionBar">false</item>
         <item name="android:windowContentOverlay">@null</item>
