--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -23,7 +23,7 @@
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:layout_centerHorizontal="true"
-                android:src="@mipmap/logo_blue" />
+                android:src="@mipmap/icon_blue" />
 
             <TextView
                 android:id="@+id/tv_version_code"
@@ -75,16 +75,68 @@
 
         </LinearLayout>
 
+
+
+        <LinearLayout
+            android:id="@+id/llayout_user_agreement"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="用户协议"
+                android:textColor="@color/main_black_color"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="14dp"
+                android:src="@mipmap/right_enter" />
+
+        </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/light_gray"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
+
+        <LinearLayout
+            android:id="@+id/llayout_policy"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="@string/register_policy_txt"
+                android:textColor="@color/main_black_color"
+                android:textSize="16sp" />
+
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="14dp"
+                android:src="@mipmap/right_enter" />
+
+        </LinearLayout>
         <!--联系我们-->
         <LinearLayout
             android:id="@+id/llayout_contact_us"
             android:layout_width="match_parent"
             android:layout_height="44dp"
+            android:visibility="gone"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
