--- a/app/src/main/res/values/argument.xml
+++ b/app/src/main/res/values/argument.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <string name="argument">【重要提示】\n
-请您在开始使用欧众智能家庭系列产品（以下简称“本产品”）之前请务必仔细阅读 并理解《用户许可使用协议》（以下简称“本协议”）中规定的所有权利和限制。\n
+请您在开始使用微新风智能家庭系列产品（以下简称“本产品”）之前请务必仔细阅读 并理解《用户许可使用协议》（以下简称“本协议”）中规定的所有权利和限制。\n
 \n
-杭州欧众物联网科技有限公司（以下简称“欧众”或“我们”）一向尊重并会严格保护用户在 使用本产品时的合法权益（包括用户隐私、用户数据等）不受到任何侵犯。\n
+宁波天科微新风智能科技有限公司（以下简称“微新风”或“我们”）一向尊重并会严格保护用户在 使用本产品时的合法权益（包括用户隐私、用户数据等）不受到任何侵犯。\n
 \n
-本产品包括但不限于欧众智能家庭硬件与欧众智能家庭软件及其相关的、均由欧众开发的产品。本产品中相关的知识产权（包括本产品的一切版权、专利权、商标权 等）均属于欧众。\n
+本产品包括但不限于微新风智能家庭硬件与微新风智能家庭软件及其相关的、均由微新风开发的产品。本产品中相关的知识产权（包括本产品的一切版权、专利权、商标权 等）均属于微新风。\n
 \n
-本协议（包括本文最后部分的隐私政策）是用户（包括通过各种合法途径获取到本产品的自然人、法人或其他组织机构，以下简称“用户”或“您“）与欧众之间针对本产品相关事项最终的、完整的且排他的协议，并取代、合并之前的当事人之间关于上述事项的讨论和协议。\n
+本协议（包括本文最后部分的隐私政策）是用户（包括通过各种合法途径获取到本产品的自然人、法人或其他组织机构，以下简称“用户”或“您“）与微新风之间针对本产品相关事项最终的、完整的且排他的协议，并取代、合并之前的当事人之间关于上述事项的讨论和协议。\n
 \n
-本协议将对用户使用本产品的行为产生法律约束力，您已承诺和保证有权利和能力订立本协议。用户开始使用本产品将视为已经接受本协议，请认真阅读并理解本协议中各条款，包括免除和限制欧众责任的免责条款和对用户的权利限制（未成年人 审阅时应由法定监护人陪同），如果您不能接受本协议中的全部条款，请勿开始使 用本产品。（如您已购买了我们的硬件产品但无法接受本协议中的全部条款，硬件产品部分的相关退货政策请联系我们）\n
+本协议将对用户使用本产品的行为产生法律约束力，您已承诺和保证有权利和能力订立本协议。用户开始使用本产品将视为已经接受本协议，请认真阅读并理解本协议中各条款，包括免除和限制微新风责任的免责条款和对用户的权利限制（未成年人 审阅时应由法定监护人陪同），如果您不能接受本协议中的全部条款，请勿开始使 用本产品。（如您已购买了我们的硬件产品但无法接受本协议中的全部条款，硬件产品部分的相关退货政策请联系我们）\n
 \n
 1、使用\n
 1.1 帐户\n
-用户无需建立账户即可使用本产品。如果您想使用本产品更多功能，您需要注册欧众账号并且于注册页面上提供相关的个人信息。您必须承诺和保证：\n
+用户无需建立账户即可使用本产品。如果您想使用本产品更多功能，您需要注册微新风账号并且于注册页面上提供相关的个人信息。您必须承诺和保证：\n
 1.1.1 您提交的所有注册信息必须真实准确；\n
 1.1.2 您使用本产品的行为必须合法；\n
-1.1.3 您可以按照欧众账号使用说明随时终止使用您的账户。\n
+1.1.3 您可以按照微新风账号使用说明随时终止使用您的账户。\n
 本产品将会依据本协议第5条的规定保留或终止您的账户。您必须承诺对您的登录信息保密、不被其他人获取与使用，并且对您在本网站账户下的所有行为负责。您必须将任何有可能触犯法律的、未授权使用或怀疑为未授权使用的行为在第一时间通知本产品。本产品不对您因未能遵守上述要求而造成的损失承担法律责任。\n
 1.2 网络加速与故障检测服务
 在您使用本产品的过程中，有部分使用场景本产品会在征询您的同意之后对您在使用过程中的一部分网络访问行为进行检测。此举旨在帮助您进行网络加速与并在必要的时候执行故障检测服务。该检测全部由软件程序完成，不会有任何人为监控， 只是使用相关的软件程序进行匹配并指引您打开相应的第三方内容或页面。我们承诺将确保您在使用本产品过程中的隐私不会被泄露。\n
@@ -34,8 +34,8 @@
 2.2.4 除非法律明文规定，否则您不得对本产品的任何部分以任何形式或方法进行生产、复制、发行、出售、下载或显示等；\n
 2.2.5 您不得删除或破坏包含在本产品中的任何版权声明或其他所有权标记。\n
 2.3 权利归属\n
-2.3.1 欧众许可您使用、下载本产品；\n
-2.3.2 欧众（及其“授权人”，如有）拥有本产品的所有相关知识产权。\n
+2.3.1 微新风许可您使用、下载本产品；\n
+2.3.2 微新风（及其“授权人”，如有）拥有本产品的所有相关知识产权。\n
 \n
 2.4 费用\n
 您必须自行负担购买本产品的费用，个人上网或第三方（包括但不限于电信或移动通讯提供商）收取的通讯费、信息费等相关费用。如涉及电信增值服务，我们建议您与增值服务提供商确认相关费用问题。\n
@@ -48,8 +48,8 @@
 3.1.3 您已同意您的用户内容受到第4条的限制。\n
 \n
 3.2 反馈\n
-3.2.1 您对欧众提出的建议（或称“反馈”），即视为您向欧众转让“反馈”的全部权利并同意欧众有权利以任何合理方式使用此反馈及其相关信息。我们将视此类反馈信息为非保密且非专有；\n
-3.2.2 您已同意您不会向欧众提供任何您视为保密和专有的信息。\n
+3.2.1 您对微新风提出的建议（或称“反馈”），即视为您向微新风转让“反馈”的全部权利并同意微新风有权利以任何合理方式使用此反馈及其相关信息。我们将视此类反馈信息为非保密且非专有；\n
+3.2.2 您已同意您不会向微新风提供任何您视为保密和专有的信息。\n
 3.3 我们将保留基于我们的判断检查用户分享内容的权利（而非义务）\n
 无论通知与否，我们有权在任何时间以任何理由删除和移动您的用户分享内容。依据第5条规定，我们有权保留或终止您的账户。\n
 \n
@@ -74,22 +74,22 @@
 5、修改和终止\n
 5.1 修改\n
 5.1.1 本协议容许变更。如果本协议有任何实质性变更，我们将通过电子邮件来通知您。变更通知之后，继续使用本产品则视为您已知晓此类变更并同意接受条款约束。\n
-5.1.2 欧众保留在任何时候无需通知而修改、保留或关闭本产品任何服务之权利。\n
-5.1.3 您已同意欧众无需因修改、保留或关闭本产品任何服务的行为对您或第三方承担责任。\n
+5.1.2 微新风保留在任何时候无需通知而修改、保留或关闭本产品任何服务之权利。\n
+5.1.3 您已同意微新风无需因修改、保留或关闭本产品任何服务的行为对您或第三方承担责任。\n
 5.2 终止\n
 5.2.1 本协议自您接受之日起生效，在您使用本产品的过程中持续有效，直至依据本协议终止；\n
 5.2.2 尽管有上述规定，如果您使用本产品的时间早于您接受本协议的时间，您在此知晓并同意本协议于您第一次使用本产品时生效，除非依据本协议提前终止；\n
 5.2.3 我们可能会依据法律的规定，保留您使用本产品或者本网站账户的权利；无论是否通知，我们将在任何时间以任何原因终止本协议，包括出于善意的相信您违反了我们可接受使用政策或本协议的其他规定；\n
-5.2.4 不受前款规定所限，如果用户侵犯第三人的版权且欧众接到版权所有人或版 权所有人的合法代理人的通知后，欧众保留终止本协议的权利；\n
-5.2.5 一旦本协议终止，您使用本产品的权利即告终止。您应当知晓您的产品终止意味着您的用户内容将从我们的活动数据库中删除。欧众不因终止本协议对您承担任何责任，包括终止您的用户账户和删除您的用户内容。\n
+5.2.4 不受前款规定所限，如果用户侵犯第三人的版权且微新风接到版权所有人或版 权所有人的合法代理人的通知后，微新风保留终止本协议的权利；\n
+5.2.5 一旦本协议终止，您使用本产品的权利即告终止。您应当知晓您的产品终止意味着您的用户内容将从我们的活动数据库中删除。微新风不因终止本协议对您承担任何责任，包括终止您的用户账户和删除您的用户内容。\n
 \n
 \n
 6、第三方\n
 6.1 您已知晓或同意我们的部分服务是基于第三方的技术支持获得。\n
-您已知晓本协议是在您与欧众之间签订，而非您与上述第三方之间签订。欧众是基于本产品所产生的内容、维护、支持服务、保证和由此产生的诉讼等事项的唯一责任人。您已同意遵守且授权给本产品限制您有条件地使用本产品的服务。\n
+您已知晓本协议是在您与微新风之间签订，而非您与上述第三方之间签订。微新风是基于本产品所产生的内容、维护、支持服务、保证和由此产生的诉讼等事项的唯一责任人。您已同意遵守且授权给本产品限制您有条件地使用本产品的服务。\n
 6.2 第三方信息和服务\n
-6.2.1 本产品包含了第三方的部分信息和服务。欧众不控制且不对第三方的信息和服务负责。\n
-6.2.2 欧众仅为您使用方便之目的或为承诺和保证第三方之需要而提供此类信息和服务。\n
+6.2.1 本产品包含了第三方的部分信息和服务。微新风不控制且不对第三方的信息和服务负责。\n
+6.2.2 微新风仅为您使用方便之目的或为承诺和保证第三方之需要而提供此类信息和服务。\n
 6.2.3 用户需对使用第三方信息和服务产生的风险承担法律责任。\n
 6.2.4 当用户访问第三方信息和服务时，适用第三方的条款和政策。\n
 6.3 其他用户\n
@@ -97,13 +97,13 @@
 6.3.2 用户与其他用户的互动仅属于您与其他用户之间的行为，本产品对此类行为不承担任何法律责任。您已同意本产品对此类互动行为的结果不承担法律责任。\n
 \n
 7、赔偿\n
-7.1 您已同意无害地使用本产品，避免欧众因下述行为或相关行为遭受来自第三方的任何投诉、诉讼、损失、损害、责任、成本和费用（包括律师费）：\n
+7.1 您已同意无害地使用本产品，避免微新风因下述行为或相关行为遭受来自第三方的任何投诉、诉讼、损失、损害、责任、成本和费用（包括律师费）：\n
 7.1.1 用户使用本产品的行为；\n
 7.1.2 用户的用户内容；\n
 7.1.3 用户违反本协议的行为。\n
-7.2 欧众保留专属抗辩权和请求赔偿的权利。\n
-7.3 您已同意，除非获得欧众书面同意，您不得在您与欧众共同对第三方提起的诉讼中单方和解。\n
-7.4 欧众将尽合理努力将此类诉讼、诉讼行为或进程通知您。\n
+7.2 微新风保留专属抗辩权和请求赔偿的权利。\n
+7.3 您已同意，除非获得微新风书面同意，您不得在您与微新风共同对第三方提起的诉讼中单方和解。\n
+7.4 微新风将尽合理努力将此类诉讼、诉讼行为或进程通知您。\n
 7.5 在任何情况下，本产品都不对您或任何第三方因本协议产生的任何间接性、后果性、惩戒性的、偶然的、特殊或惩罚性的损害赔偿承担责任。访问、使用本产品 所产生的损坏计算机系统或移动通讯设备数据库的风险将由您个人承担。\n
 \n
 8、免责声明\n
@@ -121,15 +121,15 @@
 8.2.4、因用户不当使用本功能而导致的任何损失，本公司亦不承担任何法律责任。\n
 
 9、隐私政策\n
-“欧众智能家庭系列产品隐私政策”为本协议的一部分，您可以在本文的最后部分找到。请您认真阅读并理解隐私协议中的所有内容。\n
+“微新风智能家庭系列产品隐私政策”为本协议的一部分，您可以在本文的最后部分找到。请您认真阅读并理解隐私协议中的所有内容。\n
 \n
 10、通知\n
-10.1 用户必须在欧众账号中提供您最近经常使用的有效的电子邮件地址。您所提供的电子邮件地址无法使用或者因任何原因我们无法将通知送达给您而产生的风险，本产品不承担责任。\n
+10.1 用户必须在微新风账号中提供您最近经常使用的有效的电子邮件地址。您所提供的电子邮件地址无法使用或者因任何原因我们无法将通知送达给您而产生的风险，本产品不承担责任。\n
 10.2 本产品发布的公告通知及向您所发送的包含此类通知的电子邮件毫无疑问构成有效通知。\n
 \n
 11、适用法律\n
 11.1 本协议适用中华人民共和国法律。\n
-11.2 如果双方发生纠纷，应本着友好的原则协商解决；如协商不成，应向欧众所在地的法院提起诉讼。\n
+11.2 如果双方发生纠纷，应本着友好的原则协商解决；如协商不成，应向微新风所在地的法院提起诉讼。\n
 \n
 12、独立性\n
 本协议中的某些条款因故无法适用，则本协议的其他条款继续适用且无法适用的条款将会被修改，以便其能够依法适用。\n
@@ -137,5 +137,5 @@
 13、完整性\n
 13.1 本协议（包括隐私政策）是您和本产品之间关于本产品相关事项的最终的、 完整的、排他的协议，且取代和合并之前当事人关于此类事项（包括之前的最终用户许可、服务条款和隐私政策）的讨论和协议。\n
 13.2 每部分的题目只为阅读之便而无任何法律或合同义务。\n
-13.3 除非欧众书面同意，您不得转让本协议所规定的权利义务。任何违反上述规定企图转让的行为均无效。</string>
+13.3 除非微新风书面同意，您不得转让本协议所规定的权利义务。任何违反上述规定企图转让的行为均无效。</string>
 </resources>
